App works. First push to git hub, with .env stuff all in place.

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ brew_db=d89bf914be5d33893a9cbe1cdd88556c
 map_token=pk.eyJ1Ijoibmlja2xhdGhlIiwiYSI6InhteXZpY1kifQ.7auBYdWGL5ttVM1kbrn93Q
 map_id=nicklathe.506fa65a
 google_key=AIzaSyAM7-sHXiFxjPvCruNLY_yikgBYOpzDVUM
+session_secret=ilovebeerandbreweries
